--- a/.github/workflows/cut-release.yml
+++ b/.github/workflows/cut-release.yml
@@ -23,4 +23,5 @@ jobs:
         id: create_tag
         uses: jaywcjlove/create-tag-action@main
         with:
+          version: v1.10.0
           test: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'
