--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   release:
     name: Publish release
-    runs-on: [self-hosted, Linux]
+    runs-on: ubuntu-latest
     
     if: github.event.pull_request.merged == true # only merged pull requests must trigger this job
     steps:
