--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -31,7 +31,7 @@ jobs:
         uses: jaywcjlove/create-tag-action@main
         with:
           version: v1.2.3
-          test: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'   
+          # test: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'   
           
     # create tags 
     # e.g. branch: release/1.0.0 
