--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: ${{ env.RELEASE_VERSION }}
+          default_bump: false
   # createTag:
         
           # test: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'   
