--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -21,18 +21,18 @@ jobs:
         run: |
           BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
           VERSION=${BRANCH_NAME#release/}
-          echo "RELEASE_VERSION=$VERSION" 
+          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
       - name: Extract version from branch name (for hotfix branches)
         if: startsWith(github.event.pull_request.head.ref, 'hotfix/')
         run: |
           BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
           VERSION=${BRANCH_NAME#hotfix/}
-          echo "RELEASE_VERSION=$VERSION" 
+          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
       - name: Create Tag
         id: create_tag
         uses: avakar/tag-and-release@v1
         with:
-          tag_name: ${{ RELEASE_VERSION }}
+          tag_name: ${{ evv.RELEASE_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: createTag
