--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -32,7 +32,7 @@ jobs:
         id: create_tag
         uses: avakar/tag-and-release@v1
         with:
-          tag_name: ${{ evv.RELEASE_VERSION }}
+          tag_name: ${{ env.RELEASE_VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: createTag
