--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -6,8 +6,6 @@ on:
       - main
     types:
       - closed
-# env:
-#   RELEASE_VERSION: v0.0.0
 
 jobs:
   release:
@@ -28,24 +26,41 @@ jobs:
           BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
           VERSION=${BRANCH_NAME#hotfix/}
           echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
-      - name: Create Tag
-        id: create_tag
-        uses: avakar/tag-and-release@v1
+      - name: createTag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
         with:
-          tag_name: ${{ env.RELEASE_VERSION }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: false
+          custom_tag: ${{ env.RELEASE_VERSION }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: createTag
-      #   id: tag_version
-      #   uses: mathieudutour/github-tag-action@v6.0
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          release_name: Release ${{ steps.tag_version.outputs.new_version }}
+          body: ${{ steps.tag_version.outputs.changelog }}
+          draft: false
+          prerelease: false
+       
+      # - name: Create Tag
+      #   id: create_tag
+      #   uses: avakar/tag-and-release@v1
       #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     default_bump: false
-      #     custom_tag: ${{ env.RELEASE_VERSION }}
+      #     tag_name: ${{ github.event.pull_request.head.ref }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-  # createTag:
-        
-          # test: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'   
+#       - name: Create Tag
+#         id: create_tag
+#         uses: jaywcjlove/create-tag-action@main
+#         with:
+#           version: ${{ env.RELEASE_VERSION }}
+#           test: '[R|r]elease[d]\s+[v|V]\d(\.\d+){0,2}'  
           
     # create tags 
     # e.g. branch: release/1.0.0 
