--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -33,6 +33,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: false
           custom_tag: ${{ env.RELEASE_VERSION }}
+      - name: Update Major tag
+        uses: nowactions/update-majorver@v1
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Create Release
