--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -19,6 +19,8 @@ jobs:
         run: |
           BRANCH_NAME="${{ github.event.pull_request.head.ref }}"
           VERSION=${BRANCH_NAME#release/}
+          M_VERSION=$(echo "${VERSION%.*.*}")
+          echo "MAJOR_VERSION=$M_VERSION" >> $GITHUB_ENV
           echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
       - name: Extract version from branch name (for hotfix branches)
         if: startsWith(github.event.pull_request.head.ref, 'hotfix/')
@@ -33,10 +35,19 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: false
           custom_tag: ${{ env.RELEASE_VERSION }}
+      - name: createMajorTag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: false
+          custom_tag: ${{ env.RELEASE_VERSION }}
       - name: Update Major tag
         uses: nowactions/update-majorver@v1
         with:
           github_token: ${{ secrets. GITHUB_TOKEN }}
+          default_bump: false
+          custom_tag: ${{ env.MAJOR_VERSION }}
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Create Release
